# rustmssql-python

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml  CI_02.yml
python/rustmssql_python/: rustmssql_python.pyi
src/: connections.rs  lib.rs  schema_file.rs
