[package]
name = "rustmssql_python"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustmssql_python"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
parquet = "57.0.0"
chrono = "0.4.39"
tokio = { version = "1.48.0", features = ["net", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.16", features = ["compat"] }
pyo3 = { version = "0.25.0", features = ["extension-module"] }
tiberius = { version = "0.12.3", features = ["chrono"] }
[target.'cfg(not(target_os = "windows"))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[package.metadata.maturin]
python-source = "python"